--- a/tela de cadastro/index.html
+++ b/tela de cadastro/index.html
@@ -18,11 +18,15 @@
             </p>
             <p>
                 <label for="senha">
-                    <input type="text" placeholder="Coloque a sua senha">
+                    <input type="password" placeholder="Coloque a sua senha">
+                </label>
+            </p>
+            <p>
+                <label for="confirmar">
+                    <input type="password" placeholder="Confirme a sua senha">
                 </label>
             </p>
                 <p>
-
                     <label for="email">
                         <input type="text" placeholder="Informe o seu email">
                     </label>
