--- a/tela de login/index.html
+++ b/tela de login/index.html
@@ -18,7 +18,7 @@
             </p>
             <p>
                 <label for="senha">
-                    <input type="text" placeholder="Coloque a sua senha">
+                    <input type="password" placeholder="Coloque a sua senha">
                 </label>
                 <br>
                 <button>Entrar</button>
