--- a/tela de cadastro/index.html
+++ b/tela de cadastro/index.html
@@ -32,6 +32,11 @@
                     </label>
                 </p>
                 <p>
+                    <label for="telefone">
+                        <input type="tel" placeholder="Coloque o seu telefone">
+                    </label>
+                </p>
+                <p>
                     <button>Criar conta</button>
                 </p>
         </form>
