--- a/tela de cadastro/index.html
+++ b/tela de cadastro/index.html
@@ -13,22 +13,22 @@
         <form action="" class="Tudo">
             <p>
                 <label for="name">
-                    <input type="text" placeholder="Nome de usuario">
+                    <input type="text" placeholder="Nome de usuario" required>
                 </label>
             </p>
             <p>
                 <label for="senha">
-                    <input type="password" placeholder="Coloque a sua senha">
+                    <input type="password" placeholder="Coloque a sua senha" required>
                 </label>
             </p>
             <p>
                 <label for="confirmar">
-                    <input type="password" placeholder="Confirme a sua senha">
+                    <input type="password" placeholder="Confirme a sua senha" required>
                 </label>
             </p>
                 <p>
                     <label for="email">
-                        <input type="text" placeholder="Informe o seu email">
+                        <input type="text" placeholder="Informe o seu email" required>
                     </label>
                 </p>
                 <p>
