--- a/tela de login/index.html
+++ b/tela de login/index.html
@@ -13,12 +13,12 @@
         <form action="" class="Tudo">
             <p>
                 <label for="name">
-                    <input type="text" placeholder="Nome de usuario">
+                    <input type="text" placeholder="Nome de usuario" required>
                 </label>
             </p>
             <p>
                 <label for="senha">
-                    <input type="password" placeholder="Coloque a sua senha">
+                    <input type="password" placeholder="Coloque a sua senha" required>
                 </label>
                 <br>
                 <button>Entrar</button>
