--- a/tela de cadastro/index.html
+++ b/tela de cadastro/index.html
@@ -28,7 +28,7 @@
             </p>
                 <p>
                     <label for="email">
-                        <input type="text" placeholder="Informe o seu email" required>
+                        <input type="email" placeholder="Informe o seu email" required>
                     </label>
                 </p>
                 <p>
