--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             <ul>
                 <li>
                     <strong>Carboidratos:</strong> Esse nutriente é semelhante a gasolina do nosso corpo, uma fonte de energia para nossas ações mais rotineiras. É mais encontrado em massas e cereais. Um exemplo de carboidrato muito presente nos alimentos é a glicose.
-                     <p><a href="">Leia mais sobre as vitaminas em…</a></p>
+                     <p><a href="">Leia mais sobre os carboidratos em…</a></p>
                     <img src="" alt="pao">
                 </li>
                 <li>
                     <strong>Proteínas:</strong> Proteínas:  Tem grande importância para o desempenho das atividades orgânicas, como nas membranas das células que transportam substâncias para o corpo, nos anticorpos e em várias partes do organismo. 
-                     <p><a href="">Leia mais sobre as vitaminas em…</a></p>
+                     <p><a href="">Leia mais sobre as proteinas em…</a></p>
                     <img src="" alt="frango">
                 </li>
                 <li>
                     <strong>Lipídios</strong> Lipídios: Também conhecido como gorduras, não são produzidos pelo corpo. Muitas vezes associados a ganho de peso, mas também desempenham grande importância na proteção de órgãos vitais e na regulação e produção dos hormônios. Algumas fontes de lipídios são, por exemplo, peixes, carnes, produtos à base de leite, etc.
-                     <p><a href="">Leia mais sobre as vitaminas em…</a></p>
+                     <p><a href="">Leia mais sobre os lipídos em…</a></p>
                     <img src="" alt="churros">
                 </li>
                 <li>
@@ -39,7 +39,7 @@
                 </li>
                 <li>
                     <strong> Água:</strong>  Não é um nutriente, mas é tão importante quanto, senão até mais, dos já citados. A água, como é de conhecimento quase geral, é a base para toda a vida, logicamente, para ter uma boa vida seria indispensável o consumo da mesma.
-                     <p><a href="">Leia mais sobre as vitaminas em…</a></p>
+                     <p><a href="">Leia mais sobre a agua em…</a></p>
                     <img src="" alt="agua">
                 </li>
             </ul>
