--- a/index.html
+++ b/index.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalho projeto integrador</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-</head>
-<body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Elegance</title>
+    <link rel="stylesheet" href="/style.css" />
+    <script>
+      const images = [
+        "Imagens/img pag inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
+        "Imagens/img pag inicial/kike-vega-F2qh3yjz6Jk-unsplash.jpg",
+        "Imagens/img pag inicial/sven-mieke-1MrMsNBcsYA-unsplash.jpg",
+        "Imagens/img pag inicial/victor-freitas-WvDYdXDzkhs-unsplash.jpg",
+      ];
+
+      document.addEventListener("DOMContentLoaded", (_) => {
+        const randImageIndex = ~~(Math.random() * images.length);
+        document.getElementById("randImg").src = images[randImageIndex];
+      });
+    </script>
+  </head>
+  <body>
     <header>
-        <h1><strong>Alimentação equilibrada:</strong></h1>
-        <p>A alimentação é essencial para todos os seres vivos, de forma universal, ela constitui a base para todos para todas as qualidades dos seres vivos, como o crescimento, a evolução, a reprodução, todas essas ações são impossíveis sem uma alimentação. Mas não basta apenas se alimentar, é necessário que para o desempenho das mais diversas funções tenhamos uma alimentação saudável e equilibrada.</p>
+      <h2>Elegance</h2>
+      <nav>
+        <ul>
+          <li>
+            <a class="contato" href="#contato">Contato</a>
+          </li>
+          <li>
+            <a href="#sobre">Sobre</a>
+          </li>
+          <li>
+            <a href="#servicos">Serviços</a>
+          </li>
+          <li>
+            <a href="#inicio">Início</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="nutrientes">
-            <h2><strong>O papel dos nutrientes em nosso corpo: </strong></h2>
-            <p>De forma global, todas as pessoas para ter uma alimentação saudável devem  ingerir, pelos menos, os seguinte nutrientes:</p>
-            <ul>
-                <li>
-                    <strong>Carboidratos:</strong> Esse nutriente é semelhante a gasolina do nosso corpo, uma fonte de energia para nossas ações mais rotineiras. É mais encontrado em massas e cereais. Um exemplo de carboidrato muito presente nos alimentos é a glicose.
-                     <p><a href="">Leia mais sobre os carboidratos em…</a></p>
-                    <img src="" alt="pao">
-                </li>
-                <li>
-                    <strong>Proteínas:</strong> Proteínas:  Tem grande importância para o desempenho das atividades orgânicas, como nas membranas das células que transportam substâncias para o corpo, nos anticorpos e em várias partes do organismo. 
-                     <p><a href="">Leia mais sobre as proteinas em…</a></p>
-                    <img src="" alt="frango">
-                </li>
-                <li>
-                    <strong>Lipídios</strong> Lipídios: Também conhecido como gorduras, não são produzidos pelo corpo. Muitas vezes associados a ganho de peso, mas também desempenham grande importância na proteção de órgãos vitais e na regulação e produção dos hormônios. Algumas fontes de lipídios são, por exemplo, peixes, carnes, produtos à base de leite, etc.
-                     <p><a href="">Leia mais sobre os lipídos em…</a></p>
-                    <img src="" alt="churros">
-                </li>
-                <li>
-                    <strong>Vitaminas:</strong>  As vitaminas são essenciais para garantir o funcionamento das reações em nosso corpo, são catalizadores. De outra forma, as vitaminas ajudam as reações químicas de nosso corpo a ocorrerem de forma mais rápida e gastando menos energia no processo. Um exemplo de alimento rico em nutrientes são as frutas.
-                    <p><a href="">Leia mais sobre as vitaminas em…</a></p>
-                    <img src="" alt="frutas">
-                </li>
-                <li>
-                    <strong> Água:</strong>  Não é um nutriente, mas é tão importante quanto, senão até mais, dos já citados. A água, como é de conhecimento quase geral, é a base para toda a vida, logicamente, para ter uma boa vida seria indispensável o consumo da mesma.
-                     <p><a href="">Leia mais sobre a agua em…</a></p>
-                    <img src="" alt="agua">
-                </li>
-            </ul>
-            <p>	Então, a base e os princípios para ter uma dieta e alimentação equilibrada é o consumo frequente de alimentos ricos nesses nutrientes e a água, de forma a sempre manter um equilíbrio entre eles.</p>
-        </section>
+      <section id="inicio">
+        <div class="randIMG">
+          <img id="randImg" src="" alt="Fitly Banner" />
+          <div class="inicio">
+            <h1>Construindo o Futuro com Design e Código</h1>
+            <p>
+              Criamos experiências digitais memoráveis que impulsionam o
+              sucesso.
+            </p>
+            <a href="#servicos">Conheça nossos serviços</a>
+          </div>
+        </div>
+      </section>
+      <section id="servicos" class="servicos">
+        <h2>O Que Fazemos</h2>
+        <ul>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
+      </section>
     </main>
-</body>
+    <footer></footer>
+  </body>
 </html>
