Continuação Página Inicial e Importação de alguns documentos do figma para o VsCode

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elegance</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>Fitly</title>
+    <link rel="stylesheet" href="style.css"/>
     <script>
       const images = [
         "Imagens/img pag inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
@@ -21,17 +21,17 @@
   </head>
   <body>
     <header>
-      <h2>Elegance</h2>
+      <h2>Fitly</h2>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="#contato">Contato</a>
+            <a class="contato" href="Artigos/artigos.html">Artigos</a>
           </li>
           <li>
-            <a href="#sobre">Sobre</a>
+            <a href="#sobre">Sobre o projeto</a>
           </li>
           <li>
-            <a href="#servicos">Serviços</a>
+            <a href="#plataforma">Destaques</a>
           </li>
           <li>
             <a href="#inicio">Início</a>
@@ -44,24 +44,38 @@
         <div class="randIMG">
           <img id="randImg" src="" alt="Fitly Banner" />
           <div class="inicio">
-            <h1>Construindo o Futuro com Design e Código</h1>
+            <h1>Transforme sua vida com saúde e tecnologia</h1>
             <p>
-              Criamos experiências digitais memoráveis que impulsionam o
-              sucesso.
+              Controle calorias, treine e alcance seus objetivos.
             </p>
-            <a href="#servicos">Conheça nossos serviços</a>
+            <a href="https://google.com" target="_blank">Comece Agora</a>
           </div>
         </div>
       </section>
-      <section id="servicos" class="servicos">
-        <h2>O Que Fazemos</h2>
-        <ul>
-          <li>
-            <h3></h3>
-            <p></p>
-          </li>
-        </ul>
-      </section>
+        <section id="plataforma" class="plataforma">
+          <img src="Imagens/mockups/Home-portrait.png" alt="FitlyApp">
+          <h2>Nossa Plataforma</h2>
+          <h4>A Fitly é uma plataforma desenvolvida para ajudar você a alcançar seus objetivos de forma prática e saudável.</h4>
+          <h3>O Que Oferecemos</h3>
+            <ul>
+                <li>
+                    <h3>🥗 Receitas Saudáveis</h3>
+                    <p>Descubra refeições práticas, nutritivas e saborosas feitas para todos os gostos.</p>
+                </li>
+                <li>
+                    <h3>⚖️ Contador de Calorias</h3>
+                    <p>Acompanhe sua ingestão diária com precisão e mantenha-se no controle.</p>
+                </li>
+                <li>
+                    <h3>💧 Controle de Água e Peso</h3>
+                    <p>Monitore sua hidratação e evolução de peso de forma simples.</p>
+                </li>
+                <li>
+                    <h3>📖 Artigos</h3>
+                    <p>Conteúdo exclusivo com dicas de saúde, nutrição e bem-estar para orientar sua jornada.</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
   </body>
