Criação Da Página 404 e Ajuste Header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         document.getElementById("randImg").src = images[randImageIndex];
       });
     </script>
+    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <h2>Fitly</h2>
+      <div class="logo">
+        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo">
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </div>
       <nav>
         <ul>
           <li>
@@ -48,7 +52,7 @@
             <p>
               Controle calorias, treine e alcance seus objetivos.
             </p>
-            <a href="https://google.com" target="_blank">Comece Agora</a>
+            <a href="https://google.com">Comece Agora</a>
           </div>
         </div>
       </section>
