Ajuste Página Inicial

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo">
+        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="Artigos/artigos.html">Artigos</a>
+            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
           </li>
           <li>
             <a href="#sobre">Sobre o projeto</a>
           </li>
           <li>
-            <a href="#plataforma">Destaques</a>
+            <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
             <a href="#inicio">Início</a>
@@ -52,31 +52,31 @@
             <p>
               Controle calorias, treine e alcance seus objetivos.
             </p>
-            <a href="https://google.com">Comece Agora</a>
+            <a href="TrabalhandoNisso.html">Comece Agora</a>
           </div>
         </div>
       </section>
         <section id="plataforma" class="plataforma">
           <img src="Imagens/mockups/Home-portrait.png" alt="FitlyApp">
           <h2>Nossa Plataforma</h2>
-          <h4>A Fitly é uma plataforma desenvolvida para ajudar você a alcançar seus objetivos de forma prática e saudável.</h4>
-          <h3>O Que Oferecemos</h3>
+          <h4>A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida mais saudável. Combinando <b>tecnologia e bem-estar,</b> nossa plataforma oferece recursos práticos e intuitivos para acompanhar sua rotina, controlar sua alimentação e manter hábitos que fazem diferença.</h2>
+          <h2>O Que Oferecemos</h2>
             <ul>
                 <li>
-                    <h3>🥗 Receitas Saudáveis</h3>
-                    <p>Descubra refeições práticas, nutritivas e saborosas feitas para todos os gostos.</p>
+                    <h3><i class="fa-solid fa-bowl-food"></i> Receitas Saudáveis</h3>
+                    <p>Descubra um universo de opções nutritivas e saborosas, pensadas para diferentes estilos de vida. Nossas receitas são práticas, rápidas e acessíveis, ajudando você a manter uma alimentação equilibrada sem abrir mão do prazer de comer bem.</p>
                 </li>
                 <li>
-                    <h3>⚖️ Contador de Calorias</h3>
-                    <p>Acompanhe sua ingestão diária com precisão e mantenha-se no controle.</p>
+                    <h3><i class="fa-solid fa-scale-balanced"></i> Contador de Calorias</h3>
+                    <p>Acompanhe sua ingestão de forma simples e inteligente. Registre cada refeição, visualize a distribuição de carboidratos, proteínas e gorduras, e mantenha o controle sobre sua dieta para alcançar seus objetivos com precisão.</p>
                 </li>
                 <li>
-                    <h3>💧 Controle de Água e Peso</h3>
-                    <p>Monitore sua hidratação e evolução de peso de forma simples.</p>
+                    <h3><i class="fa-solid fa-bottle-water"></i> Controle de Água e Peso</h3>
+                    <p>Monitore sua hidratação diária e acompanhe a evolução do seu peso com praticidade. Nossa ferramenta permite definir metas e acompanhar seu progresso, incentivando hábitos mais saudáveis no dia a dia.</p>
                 </li>
                 <li>
-                    <h3>📖 Artigos</h3>
-                    <p>Conteúdo exclusivo com dicas de saúde, nutrição e bem-estar para orientar sua jornada.</p>
+                    <h3><i class="fa-solid fa-book"></i> Artigos</h3>
+                    <p>Acesse conteúdos sobre saúde, nutrição, exercícios e bem-estar. Nossos artigos foram pensados para orientar sua jornada de transformação, trazendo dicas valiosas e informações confiáveis para o seu crescimento pessoal.</p>
                 </li>
             </ul>
         </section>
