--- a/404.html
+++ b/404.html
@@ -10,22 +10,13 @@
 <body>
     <header>
       <div class="logo">
-        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo">
+        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="Artigos/artigos.html">Artigos</a>
-          </li>
-          <li>
-            <a href="#sobre">Sobre o projeto</a>
-          </li>
-          <li>
-            <a href="#plataforma">Destaques</a>
-          </li>
-          <li>
-            <a href="#inicio">Início</a>
+            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
           </li>
         </ul>
       </nav>
