--- a/TrabalhandoNisso.html
+++ b/TrabalhandoNisso.html
@@ -9,23 +9,14 @@
 </head>
 <body>
     <header>
-    <div class="logo">
-        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo">
+      <div class="logo">
+        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="Artigos/artigos.html">Artigos</a>
-          </li>
-          <li>
-            <a href="#sobre">Sobre o projeto</a>
-          </li>
-          <li>
-            <a href="#plataforma">Destaques</a>
-          </li>
-          <li>
-            <a href="#inicio">Início</a>
+            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
           </li>
         </ul>
       </nav>
@@ -35,7 +26,7 @@
         <h1>404</h1>
         <h2>Estamos Trabalhando Para Finalizar Está Página o Mais Rápido Possível</h2>
         <button></button>
-        <a href="/FitlyApp" target="_blank"> <i class="fa-solid fa-house"></i>  Volte A Página Inicial</a>
+        <a href="/FitlyApp"> <i class="fa-solid fa-house"></i>  Volte A Página Inicial</a>
         </section>
     </main>
     <footer>
