--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -32,7 +32,7 @@
             rotineiras. É mais encontrado em massas e cereais. Um exemplo de
             carboidrato muito presente nos alimentos é a glicose.
             <p><a href="">Leia mais sobre os carboidratos em…</a></p>
-            <img src="" alt="pao" />
+            <img src="img beneficios-maleficios/img alimentação-equilibreda/bread-6292215_1280 2.png" alt="pao" />
           </li>
           <li>
             <strong>Proteínas:</strong> Proteínas: Tem grande importância para o
@@ -40,7 +40,7 @@
             que transportam substâncias para o corpo, nos anticorpos e em várias
             partes do organismo.
             <p><a href="">Leia mais sobre as proteinas em…</a></p>
-            <img src="" alt="frango" />
+            <img src="img beneficios-maleficios/img alimentação-equilibreda/sam-moghadam-VpOpy6QrDrs-unsplash 2.png" alt="frango" />
           </li>
           <li>
             <strong>Lipídios</strong> Lipídios: Também conhecido como gorduras,
@@ -50,7 +50,7 @@
             fontes de lipídios são, por exemplo, peixes, carnes, produtos à base
             de leite, etc.
             <p><a href="">Leia mais sobre os lipídos em…</a></p>
-            <img src="" alt="churros" />
+            <img src="img beneficios-maleficios/img alimentação-equilibreda/churros-2188871_1280 1.png" alt="churros" />
           </li>
           <li>
             <strong>Vitaminas:</strong> As vitaminas são essenciais para
@@ -60,7 +60,7 @@
             menos energia no processo. Um exemplo de alimento rico em nutrientes
             são as frutas.
             <p><a href="">Leia mais sobre as vitaminas em…</a></p>
-            <img src="" alt="frutas" />
+            <img src="img beneficios-maleficios/img alimentação-equilibreda/fresh-fruits-2305192_1280 1.png" alt="frutas" />
           </li>
           <li>
             <strong> Água:</strong> Não é um nutriente, mas é tão importante
@@ -68,7 +68,7 @@
             conhecimento quase geral, é a base para toda a vida, logicamente,
             para ter uma boa vida seria indispensável o consumo da mesma.
             <p><a href="">Leia mais sobre a agua em…</a></p>
-            <img src="" alt="agua" />
+            <img src="img beneficios-maleficios/img alimentação-equilibreda/agua-alcalina.jpg" alt="agua" />
           </li>
         </ul>
         <p>
