--- a/index.html
+++ b/index.html
@@ -80,7 +80,27 @@
                 </li>
             </ul>
         </section>
+        <section>
+
+        </section>
+        <section id="CTA" class="CTA">
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="ThreeCollum" id="ThreeCollum">
+        <div id="Parte1" class="Parte1">
+        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly Logo">
+        </div>
+        <div id="Parte2" class="Parte2">
+
+        </div>
+        <div id="Parte3" class="Parte3">
+
+        </div>
+      </section>
+      <section class="FullBar" id="FullBar">
+          <p>© 2025 Fitly. Todos os direitos reservados.</p>
+      </section>
+    </footer>
   </body>
 </html>
