--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
                 </li>
             </ul>
         </section>
-<<<<<<< HEAD
         <section class="depoimentos">
           <h2>Depoimentos</h2>
           <ul>
@@ -94,24 +93,23 @@
               </p>
             </li>
           </ul>
-=======
         <section>
 
         </section>
         <section id="CTA" class="CTA">
->>>>>>> c535af0e784211f7403269e04d8645f5925c6f2c
         </section>
     </main>
     <footer>
       <section class="ThreeCollum" id="ThreeCollum">
         <div id="Parte1" class="Parte1">
         <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly Logo">
+        <p>Sua jornada para uma vida mais saudável, com o poder da tecnologia<p>
         </div>
         <div id="Parte2" class="Parte2">
-
+          <h3>Links Rápidos</h3>
         </div>
         <div id="Parte3" class="Parte3">
-
+          <h3>Contato</h3>
         </div>
       </section>
       <section class="FullBar" id="FullBar">
