--- a/index.html
+++ b/index.html
@@ -102,14 +102,27 @@
     <footer>
       <section class="ThreeCollum" id="ThreeCollum">
         <div id="Parte1" class="Parte1">
-        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly Logo">
-        <p>Sua jornada para uma vida mais saudável, com o poder da tecnologia<p>
+        <div class="logoFooter">
+        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        </div>
+        <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-tiktok"></i></a>
         </div>
         <div id="Parte2" class="Parte2">
-          <h3>Links Rápidos</h3>
+          <h3>Indice</h3>
+          <ul>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#plataforma">Nossa Plataforma</a></li>
+            <li><a href="#sobre">Sobre o Projeto</a></li>
+            <li><a href="TrabalhandoNisso.html">Artigos</a></li>
+          </ul>
         </div>
         <div id="Parte3" class="Parte3">
           <h3>Contato</h3>
+          <ul>
+            <li><a href="mailto:Fitlyapp1@gmail.com">Fitlyapp1@gmail.com</a></li>
+          </ul>
         </div>
       </section>
       <section class="FullBar" id="FullBar">
