Continuação Página Inicial

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 
         </section>
         <section id="CTA" class="CTA">
+          <a href="TrabalhandoNisso.html">Comece Agora</a>
+          <img src="Imagens/img pag inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg" alt="">
         </section>
     </main>
     <footer>
