--- a/beneficios-alimentacao-equilibrada/index.html
+++ b/beneficios-alimentacao-equilibrada/index.html
@@ -9,28 +9,23 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+        <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </div>
       <nav>
-        <h1>
-          <a href=""></a>
-        </h1>
         <ul>
           <li>
-            <a href=""></a>
+            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
           </li>
           <li>
-            <a href=""></a>
+            <a href="#sobre">Sobre o projeto</a>
           </li>
           <li>
-            <a href=""></a>
+            <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
+            <a href="#inicio">Início</a>
           </li>
         </ul>
       </nav>
@@ -38,18 +33,12 @@
     <main>
       <section>
         <h1>Benefícios da alimentação equilibrada</h2>
-        <p>
+        <p class="meio">
           Adotar uma alimentação equilibrada é essencial para a promoção da
           saúde ao longo da vida. Uma dieta rica em nutrientes contribui
           diretamente para o bem-estar geral, ajudando na prevenção de doenças
-          crônicas e na manutenção do peso ideal. Além de proporcionar maior
-          saciedade e nutrição adequada, uma boa alimentação fortalece o sistema
-          imunológico, sendo especialmente importante nas fases de crescimento,
-          como infância e adolescência, e também na terceira idade, promovendo
-          longevidade e qualidade de vida.
+          crônicas e na manutenção do peso ideal.
         </p>
-        <h2>Uma alimentação equilibrada</h2>
-        <p>Um prato equilibrado deve conter carboidratos, proteínas, gorduras saudáveis, fibras, vitaminas e minerais, em proporções adequadas.</p>
         <ul>
             <li>
                 <img src="/Imagens/img alimentação-equilibreda/rice-6247160 1.png" alt="#">
@@ -63,7 +52,7 @@
       </section>
       <section>
         <h1>Os malefícios de alimentos ultraprocessados</h1>
-        <p>Por outro lado, o consumo excessivo de alimentos ultraprocessados — produtos industrializados com aditivos químicos, corantes e conservantes — pode trazer sérios prejuízos à saúde. Esses alimentos, embora práticos e duráveis, são pobres em nutrientes e ricos em açúcares e gorduras, aumentando o risco de obesidade, desnutrição, doenças cardiovasculares, hipertensão e diabetes tipo 2.</p>
+        <p class="meio">Por outro lado, o consumo excessivo de alimentos ultraprocessados — produtos industrializados com aditivos químicos, corantes e conservantes — pode trazer sérios prejuízos à saúde. Esses alimentos, embora práticos e duráveis, são pobres em nutrientes e ricos em açúcares e gorduras, aumentando o risco de obesidade, desnutrição, doenças cardiovasculares, hipertensão e diabetes tipo 2.</p>
         <ul>
           <li>
               <img src="/Imagens/img alimentação-equilibreda/mateusz-feliksik-w96PYF0Uwjs-unsplash 1.png" alt="#">
