beneficios-alimentos-equilibrada

--- a/beneficios-alimentacao-equilibrada/index.html
+++ b/beneficios-alimentacao-equilibrada/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beneficios alimentação saudavel</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+        <img src="img beneficios-alimentação-equilibrada/logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
@@ -41,26 +41,30 @@
         </p>
         <ul>
             <li>
-                <img src="/Imagens/img alimentação-equilibreda/rice-6247160 1.png" alt="#">
-                <p>Um prato saudável deve ser variado e equilibrado. Deve conter carboidratos, como arroz ou batata; proteínas, como frango ou feijão; e verduras e legumes, que fornecem fibras, vitaminas e minerais. Pequenas quantidades de gorduras boas, como azeite ou abacate, também são importantes. Esse equilíbrio ajuda o corpo a funcionar bem e com mais saú. <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p>
+                <img src="img beneficios-alimentação-equilibrada/rice-6247160-1.png" alt="#">
+                <h2>Prato ideal</h2>
+                <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p>
             </li>
             <li>
-                <img src="/Imagens/img alimentação-equilibreda/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
-                <p>Uma alimentação saudável é essencial para quem pratica exercícios físicos. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular. Além disso, ajuda a prevenir lesões e fortalece o sistema imunológico. Com uma dieta equilibrada, os resultados aparecem de forma mais rápida e segura. <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p>
+                <img src="img beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
+                <h2>Exercícios e Nutrição</h2>
+                <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p>
             </li>
         </ul>
       </section>
       <section>
         <h1>Os malefícios de alimentos ultraprocessados</h1>
-        <p class="meio">Por outro lado, o consumo excessivo de alimentos ultraprocessados — produtos industrializados com aditivos químicos, corantes e conservantes — pode trazer sérios prejuízos à saúde. Esses alimentos, embora práticos e duráveis, são pobres em nutrientes e ricos em açúcares e gorduras, aumentando o risco de obesidade, desnutrição, doenças cardiovasculares, hipertensão e diabetes tipo 2.</p>
+        <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo 2.</p>
         <ul>
           <li>
-              <img src="/Imagens/img alimentação-equilibreda/mateusz-feliksik-w96PYF0Uwjs-unsplash 1.png" alt="#">
-              <p>Fast food é um dos exemplos mais comuns de alimentos ultraprocessados, cheio de gorduras ruins, sódio e açúcares que fazem mal à saúde. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos. Além disso, esses alimentos têm poucos nutrientes essenciais para o corpo. São altamente ultraprocessados e podem causar vício devido ao seu sabor intenso. Evitar fast food é fundamental para manter uma alimentação equilibrada e saudável. <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p>
+              <img src="img beneficios-alimentação-equilibrada/mateusz-feliksik-w96PYF0Uwjs-unsplash 1.png" alt="#">
+              <h2>Riscos do Fast Food</h2>
+              <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p>
           </li>
           <li>
-            <img src="/Imagens/img alimentação-equilibreda/Group 24.png" alt="#">
-            <p>Saber ler os rótulos dos alimentos ajuda a evitar ultraprocessados e fazer escolhas mais saudáveis. Prefira produtos com poucos ingredientes e naturais. Fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o conteúdo de sódio e açúcar por porção. Com essa prática, você mantém uma alimentação equilibrada e consciente. <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p>
+            <img src="img beneficios-alimentação-equilibrada/Group 24.png" alt="#">
+            <h2>Atenção aos Rótulos</h2>
+            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p>
           </li>
         </ul>
       </section>
