--- a/beneficios-alimentacao-equilibrada/index.html
+++ b/beneficios-alimentacao-equilibrada/index.html
@@ -41,14 +41,14 @@
         </p>
         <ul>
             <li>
-                <div class="tudo"><img src="img beneficios-alimentação-equilibrada/rice-6247160-1.png" alt="#">
+                <img src="img beneficios-alimentação-equilibrada/rice-6247160-1.png" alt="#">
                 <div class="texto"><h2>Prato ideal</h2>
-                <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div></div>
+                <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div>
             </li>
             <li>
-                <div class="tudo"><img src="img beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
+                <img src="img beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
                 <div class="texto"><h2>Exercícios e Nutrição</h2>
-                <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p></div></div>
+                <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p></div>
             </li>
         </ul>
       </section>
@@ -57,14 +57,14 @@
         <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo 2.</p>
         <ul>
           <li>
-              <div class="tudo"><img src="img beneficios-alimentação-equilibrada/mateusz-feliksik-w96PYF0Uwjs-unsplash 1.png" alt="#">
+              <img src="img beneficios-alimentação-equilibrada/mateusz-feliksik-w96PYF0Uwjs-unsplash 1.png" alt="#">
               <div class="texto"><h2>Riscos do Fast Food</h2>
-              <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p></div></div>
+              <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p></div>
           </li>
           <li>
-            <div class="tudo"><img src="img beneficios-alimentação-equilibrada/Group 24.png" alt="#">
+            <img src="img beneficios-alimentação-equilibrada/Group 24.png" alt="#">
             <div class="texto"><h2>Atenção aos Rótulos</h2>
-            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p></div></div>
+            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p></div>
           </li>
         </ul>
       </section>
